Bug 381549 - mozStorageStatement ignores return values from SQLite.  r=sspitzer